--- a/src/Fiap.Masterchef.Infra/Fiap.Masterchef.Infra.csproj
+++ b/src/Fiap.Masterchef.Infra/Fiap.Masterchef.Infra.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\Fiap.Masterchef.Core\Fiap.Masterchef.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Hosting.Abstractions">
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.hosting.abstractions\2.0.0\lib\netstandard2.0\Microsoft.AspNetCore.Hosting.Abstractions.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
