--- a/src/Fiap.Masterchef.Web/bundleconfig.json
+++ b/src/Fiap.Masterchef.Web/bundleconfig.json
@@ -5,13 +5,16 @@
     "outputFileName": "wwwroot/css/site.min.css",
     // An array of relative input file paths. Globbing patterns supported
     "inputFiles": [
-      "wwwroot/css/site.css"
+      "wwwroot/lib/materialize/dist/css/materialize.css",
+      "wwwroot/css/custom.css"
     ]
   },
   {
     "outputFileName": "wwwroot/js/site.min.js",
     "inputFiles": [
-      "wwwroot/js/site.js"
+      "wwwroot/lib/jquery/dist/jquery.js",
+      "wwwroot/lib/materialize/dist/js/materialize.js",
+      "wwwroot/js/scripts.js"
     ],
     // Optionally specify minification options
     "minify": {
