--- a/src/Fiap.Masterchef.Web/appsettings.json
+++ b/src/Fiap.Masterchef.Web/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Masterchef;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=D:\\fiap\\masterchef\\database\\Masterchef.mdf;Integrated Security=True;Connect Timeout=30"
   }
 }
